# kvmm

./: .gitignore  Cargo.toml  Makefile  README.md  memo.json
.github/workflows/: ci.yaml  release-please.yml  release.yaml  release.yml
src/: args.rs  main.rs  utils.rs
src/commands/: add.rs  clean.rs  delete.rs  get.rs  init.rs  list.rs  mod.rs  update.rs  utils.rs  version.rs
